refactored kafka producer test